add domains class.